# DAS-Assignment

./: README.md
student-performance-ml/: README.md  main.py  pyproject.toml
student-performance-ml/models/: metadata.json
student-performance-ml/scripts/: fill_final_status.py  predict.py  train.py
student-performance-ml/src/dashboard/: app.py
student-performance-ml/src/student_ml/: __init__.py  config.py  features.py  modeling.py  predict.py  preprocess.py  train.py  utils.py
student-performance-ml/tests/: test_basic.py
student-results-dashboard/: README.md  app.py  requirements.txt
student-results-dashboard/data/: student_data_with_final_status.csv
